--- a/_posts/2020-06-05-HTTP 활용 방법.md
+++ b/_posts/2020-06-05-HTTP 활용 방법.md
@@ -1,10 +1,10 @@
 ## HTTP
 
-###  
+
 
 ### 목차
 
-**1. HTTP 정의**
+**1. HTTP 정의 및 특징**
 
 **2. HTTP 메소드 및 응답코드**
 
@@ -24,16 +24,28 @@
 
 
 
-####HTTP(HyperText Transfer Protocol) 정의
+
+
+
+
+####HTTP 정의 및 특징
 
 ---
 
-- 하이퍼미디어 문서 전송하기 위한 **`application Layer Protocol`** 로 **`TCP/IP위에서 작동`**
-- 인터넷상에서 데이터를 주고 받기 위한 **`서버/클라이언트 모델`**
-- 서버가 요청간에 어떠한 데이터 상태도 유지하지 않는 **`Statless protocol`**
-- **`Connectless`** 인 비연결형 프로토콜
-  -  장점 : 불특정 다수를 대상으로 하는 서비스에 적합
-  -  단점 : 클라이언트의 이전 상태를 알 수 없음(`stateless`) `cookie` 를 이용하여 문제 해결 가능
+**HyperText Transfer Protocol : 하이퍼텍스트, 하이퍼미디어 데이터를 주고 받는데 사용되는 프로토콜**
+
+
+
+1. TCP/IP위에서 작동하는 응용 계층(`Application Layer`) 프로토콜
+
+2. 인터넷상에서 데이터를 주고 받기 위한 서버/클라이언트 모델
+
+3. 서버가 요청간에 어떠한 데이터 상태도 유지하지 않음(`Statless protocol`)
+
+4. 비연결형 프로토콜(Connectionless)
+
+-  장점 : 불특정 다수를 대상으로 하는 서비스에 적합
+-  단점 : statless특징으로 이전 상태를 알 수 없음 (cookie 를 이용하여 문제 해결 가능)
 
 
 
@@ -42,6 +54,10 @@
 ![HTTP as an application layer protocol, on top of TCP (transport layer) and IP (network layer) and below the presentation layer.](https://mdn.mozillademos.org/files/13673/HTTP%20&%20layers.png)  
 
 > TCP 혹은 암호화된 TCP 연결인 TLS를 통해 전송이 가능하다
+
+
+
+
 
 
 
@@ -58,11 +74,11 @@
 | `GET`     | 특정 리소스의 표시를 요청                                    |
 | `HEAD`    | `GET`과 동일한 응답을 요구하나 본문을 포함하지 않음(헤더만 요청) |
 | `POST`    | 특정 리소스에 엔티티를 제출할 때 쓰임                        |
-| `PUT`     | 목적 리소스 모든 표시를 요청 `payload`로 바꿈                |
+| `PUT`     | 목적 리소스 모든 표시를 요청 payload로 바꿈                  |
 | `DELETE`  | 특정 리소스 삭제                                             |
 | `CONNECT` | 목적 리소스로 식별되는 서버로 터널을 맺음                    |
 | `OPTIONS` | 목적 리소스의 통신 설정                                      |
-| `TRACE`   | 목적 리소스의 경로를 따라 메시지 `loop-back` 테스트          |
+| `TRACE`   | 목적 리소스의 경로를 따라 메시지 loop-back 테스트            |
 | `PATCH`   | 리소스 일정 부분만 수정                                      |
 
 > RESTful 서버의 경우 메소드 구분으로 자원의 위치와 더불어 자원이 할 일을 명시할 수 있어 다양한 메소드를 사용한다.
@@ -71,67 +87,30 @@
 
 ###### 2. 응답코드
 
-| 코드 | 결과                            | 설명                                                         |
-| ---- | ------------------------------- | ------------------------------------------------------------ |
-| 100  | Continue                        | 요청을 받았으며 현재 처리중                                  |
-| 101  | Switching Protocols             | 클라이언트가 `Upgrade` 헤더를 통해 요청한 것에 따라<br /> 서버가 프로토콜을 바꾼다는 것을 알려주는 응답 코드<br />WebSockets와 함께 사용 |
-| 200  | OK                              | 성공적으로 처리                                              |
-| 204  | No Content                      | 성공적으로 처리했지만 컨텐츠 제공 안함                       |
-| 206  | Partial Content                 | 컨텐츠의 일부 부분만 제공                                    |
-| 301  | Moved Permanently               | 영구적으로 컨텐츠가 이동했을 때 사용                         |
-| 302  | Found                           | 일시적으로 컨텐츠가 이동했을때 사용                          |
-| 303  | See Other                       | 서버가 사용자의 GET요청을 처리하여 다른URL에서<br /> 요청된 정보를 가져올수 있도록 응답하는 코드 |
-| 304  | Not Modified                    | 요청된 리소스를 재전송할 필요가 없음                         |
-| 400  | Bad Request                     | 요청 자체가 잘못되었을때 사용하는 코드                       |
-| 403  | Forbidden                       | 서버가 요청을 거부할 때 발생<br /> 관리자가 해당 사용자를 차단했거나 서버에 index.html 이 없는 경우에도 발생 |
-| 404  | Not Found                       | 찾는 리소스가 없다는 뜻                                      |
-| 405  | Method Not Allowed              | PUT이나 DELETE 등 서버에서 허용되지 않은 메소드로 요청시 사용하는 코드 |
-| 406  | Not Acceptable                  | 요청은 정상이나 서버에서 받아들일 수 없는 요청일시 사용하는 코드<br />웹 방화벽에 걸리는 경우 이 코드가 반환 |
-| 500  | Internal Server Error           | 서버에 오류가 발생해 작업을 수행할 수 없을 때 사용           |
-| 502  | Bad Gateway                     | 게이트웨이가 연결된 서버로부터 잘못된 응답을 받았을 때 사용  |
-| 503  | Service Temporarily Unavailable | 서비스를 일시적으로 사용할 수 없을 때 사용된다. <br />주로 웹서버 등이 과부하로 다운되었을 때 볼 수 있다. |
-| 504  | Gateway Timeout                 | 게이트웨이가 연결된 서버로부터 응답을 받을 수 없었을 때 사용 |
+| 코드 | 결과                              | 설명                                                         |
+| ---- | --------------------------------- | ------------------------------------------------------------ |
+| 100  | `Continue`                        | 요청을 받았으며 현재 처리중                                  |
+| 101  | `Switching Protocols`             | 클라이언트가 `Upgrade` 헤더를 통해 요청한 것에 따라<br /> 서버가 프로토콜을 바꾼다는 것을 알려주는 응답 코드<br />(WebSockets)와 함께 사용 |
+| 200  | `OK`                              | 성공적으로 처리                                              |
+| 204  | `No Content`                      | 성공적으로 처리했지만 컨텐츠 제공 안함                       |
+| 206  | `Partial Content`                 | 컨텐츠의 일부 부분만 제공                                    |
+| 301  | `Moved Permanently`               | 영구적으로 컨텐츠가 이동했을 때 사용                         |
+| 302  | `Found`                           | 일시적으로 컨텐츠가 이동했을때 사용                          |
+| 303  | `See Other`                       | 서버가 사용자의 GET요청을 처리하여 다른URL에서<br /> 요청된 정보를 가져올수 있도록 응답하는 코드 |
+| 304  | `Not Modified`                    | 요청된 리소스를 재전송할 필요가 없음                         |
+| 400  | `Bad Request`                     | 요청 자체가 잘못되었을때 사용하는 코드                       |
+| 403  | `Forbidden`                       | 서버가 요청을 거부할 때 발생<br /> 관리자가 해당 사용자를 차단했거나 서버에 index.html 이 없는 경우에도 발생 |
+| 404  | `Not Found`                       | 찾는 리소스가 없다는 뜻                                      |
+| 405  | `Method Not Allowed`              | PUT이나 DELETE 등 서버에서 허용되지 않은 메소드로 요청시 사용하는 코드 |
+| 406  | `Not Acceptable`                  | 요청은 정상이나 서버에서 받아들일 수 없는 요청일시 사용하는 코드<br />웹 방화벽에 걸리는 경우 이 코드가 반환 |
+| 500  | `Internal Server Error`           | 서버에 오류가 발생해 작업을 수행할 수 없을 때 사용           |
+| 502  | `Bad Gateway`                     | 게이트웨이가 연결된 서버로부터 잘못된 응답을 받았을 때 사용  |
+| 503  | `Service Temporarily Unavailable` | 서비스를 일시적으로 사용할 수 없을 때 사용된다. <br />주로 웹서버 등이 과부하로 다운되었을 때 볼 수 있다. |
+| 504  | `Gateway Timeout`                 | 게이트웨이가 연결된 서버로부터 응답을 받을 수 없었을 때 사용 |
 
 
 
-#### HTTP 헤더
 
----
-
-###### 1. RequestHeader
-
-**`Age`** : 개체가 프록시 캐시에 있었던 시간
-
-**`Allow`** : 자원이 지원하는 메소드 세트 나열
-
-**`Alt-Svc`** : 해당 웹사이트에 접근할 수 있는 대체 방법 나열 
-
-- Syntax
-
-  ```
-  Alt-Svc: clear
-  Alt-Svc: <protocol-id>=<alt-authority>; ma=<max-age>
-  Alt-Svc: <protocol-id>=<alt-authority>; ma=<max-age>; persist=1
-  ```
-
-  - `<clear>` : 무효화 요청
-  - `<protocol-id>` : 프로토콜 식별자 (h2 = HTTP/2, h3 = HTTP/3)
-  - `<alt-authority>` : 선택적 호스트 대체, 콜론 및 필수 포트 번호
-  - `ma=<max-age>` : 응답 기간을 제외한 *최대 * 초 동안 캐시
-  - `persist=1` : 일반적으로 캐시 된 대체 서비스 항목은 네트워크 구성 변경시 지워진다. persist = 1 매개 변수를 사용하면 해당 변경 사항을 통해 항목이 삭제되지 않음.
-
-- EX
-
-  ```
-  Alt-Svc: h2=":443"; ma=2592000;
-  Alt-Svc: h2=":443"; ma=2592000; persist=1
-  Alt-Svc: h2="alt.example.com:443", h2=":443"
-  Alt-Svc: h3-25=":443"; ma=3600, h2=":443"; ma=3600
-  ```
-
-  
-
-**`User-Agent`** : 
 
 
 
@@ -139,44 +118,168 @@
 
 ---
 
-######1-1. CORS(Cross-Origin Resource Sharing) 정의
+**엑세스제어(`CORS : Cross-Origin Resource Sharing`)**
 
-**웹 페이지의 JavaScript가 AJAX요청을 원래 도메인과 다른 도메인에 요청하도록 하는 메커니즘**
-
-
-
-###### 1-2. CORS 동작 과정
-
-- 실제 요청하려는 경로와 같은 URL에 대해 OPTIONS로 요청을 날려보고 요청가능한지 확인
-
-- 실제 요청 전송
-
-![Alt CORS 동작과정](https://heowc.dev/resources/img/spring-boot-cors/cors_flow-49c352bc6c3c8ae7dc5934837661aff4.jpg) 
-
-> `pre-flight` : 실제 요청하려는 경로와 같은 URL에 대해 OPTIONS로 요청을 날려보고 요청가능한지 확인
+**서로 다른 도메인에서 리소스를 공유하도록 원래 도메인과 다른 도메인에 요청하도록 하는 메커니즘**
 
 
 
-| 속성               | 기술                                                         |
-| ------------------ | ------------------------------------------------------------ |
-| `origins`          | 허용 된 출발지 목록. 이 값은 `Access-Control-Allow-Origin` 는 `pre-flight` 전 응답과 실제 응답 의 헤더에 배치됩니다 . |
-| `allowedHeaders`   | 실제 요청 중에 사용할 수있는 요청 헤더 목록. `pre-flight`의 응답 헤더에 값이 사용됩니다 `Access-Control-Allow-Headers`. |
-| `methods`          | 지원되는 HTTP 요청 방법 목록 정의되지 않은 경우 `RequestMapping`주석으로 정의 된 메소드 가 사용됩니다. |
-| `exposedHeaders`   | 브라우저가 클라이언트가 액세스 할 수 있도록하는 응답 헤더 목록입니다. 실제 응답 헤더에 값이 설정됩니다 `Access-Control-Expose-Headers`.경우 *정의되지 않은* 빈 노출 헤더 목록이 사용됩니다. |
-| `allowCredentials` | 브라우저가 요청과 관련된 쿠키를 포함해야하는지 여부를 결정합니다.`false` – 쿠키는 포함하지 않아야합니다.`" "`(빈 문자열) – *undefined를* 의미 합니다.`true`– `pre-flight` 전 응답에는 `Access-Control-Allow-Credentials`값이 true로 설정된 헤더가 포함. |
-| `maxAge`           | `pre-flight` 전 응답에 대한 캐시 기간의 최대 수명 (초). 헤더에 값이 설정되어 `Access-Control-Max-Age`있습니다. |
+###### CORS 사용 이유
+
+보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
+
+동일 출처 정책(`Same-origin-policy`)을 따르지 않을 경우, API이용이 거절 된다.
+
+한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
 
 
 
-###### 1-3. Spring CORS 예제
+###### 해결 방법
 
-**Method Level**
+`JSONP(JSON with Padding)` 사용
+
+- 클라이언트가 아닌, 각기 다른 도메인에 상주하는 서버로부터 데이터를 요청하기 위해 사용
+
+서버에서 CORS설정
+
+- Spring의 경우 4.2부터 지원
+
+
+
+###### CORS 동작 과정
+
+실제 요청하려는 경로와 같은 URL에 대해 pre-flight 로 요청을 날려보고 요청가능한지 확인
+
+> prefilght : OPTIONS메서드를 통해 다른 도메인의 리소스로 HTTP요청을 보내 실제 요청이 전송하기 안전한지 확인
+
+
+
+![img](https://mdn.mozillademos.org/files/16753/preflight_correct.png) 
+
+
+
+**클라이언트 요청**
+
+```javascript
+//javascript 예시
+//setRequsetHeader로 직접 헤더를 설정해 pre-flight 요청 가능
+const xhr = new XMLHttpRequest();
+xhr.open('POST', 'https://bar.other/resources/post-here/');
+xhr.setRequestHeader('Ping-Other', 'pingpong');
+xhr.setRequestHeader('Content-Type', 'application/xml');
+xhr.onreadystatechange = handler;
+xhr.send('<person><name>Arun</name></person>');
+```
+
+
+
+**pre-flight HTTP 요청**
+
+```http
+OPTIONS /resources/post-here/ HTTP/1.1
+Host: bar.other
+User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:71.0) Gecko/20100101 Firefox/71.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-Language: en-us,en;q=0.5
+Accept-Encoding: gzip,deflate
+Connection: keep-alive
+Origin: http://foo.example
+Access-Control-Request-Method: POST
+Access-Control-Request-Headers: X-PINGOTHER, Content-Type
+```
+
+> 위에서 사용한 사용자 정의 헤더(Access-Control-Request-Headers)가 존재하기 때문에 pre-filght가 동작해 OPTIONS메소드로 요청
+>
+> origin : 요청을 보낸 호스트URL
+
+
+
+**pre-flight HTTP 응답**
+
+```http
+HTTP/1.1 204 No Content
+Date: Mon, 01 Dec 2008 01:15:39 GMT
+Server: Apache/2
+Access-Control-Allow-Origin: https://foo.example
+Access-Control-Allow-Methods: POST, GET, OPTIONS
+Access-Control-Allow-Headers: X-PINGOTHER, Content-Type
+Access-Control-Max-Age: 86400
+Vary: Accept-Encoding, Origin
+Keep-Alive: timeout=2, max=100
+Connection: Keep-Alive
+```
+
+> Access-Control-Allow-Origin 값에 있는 도메인만 허용 가능하다
+>
+> Access-Control-Allow-Methods 값에 있는 메서드들만 허용
+>
+> Access-Control-Max-Age 값에있는 시간(초) 만큼만 캐시 유지
+
+ 
+
+**콘텐츠 HTTP 요청**
+
+```http
+POST /resources/post-here/ HTTP/1.1
+Host: bar.other
+User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:71.0) Gecko/20100101 Firefox/71.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-Language: en-us,en;q=0.5
+Accept-Encoding: gzip,deflate
+Connection: keep-alive
+X-PINGOTHER: pingpong
+Content-Type: text/xml; charset=UTF-8
+Referer: https://foo.example/examples/preflightInvocation.html
+Content-Length: 55
+Origin: https://foo.example
+Pragma: no-cache
+Cache-Control: no-cache
+
+<person><name>Arun</name></person>
+```
+
+
+
+**콘텐츠 HTTP 응답**
+
+```http
+HTTP/1.1 200 OK
+Date: Mon, 01 Dec 2008 01:15:40 GMT
+Server: Apache/2
+Access-Control-Allow-Origin: https://foo.example
+Vary: Accept-Encoding, Origin
+Content-Encoding: gzip
+Content-Length: 235
+Keep-Alive: timeout=2, max=99
+Connection: Keep-Alive
+Content-Type: text/plain
+
+[Some GZIP'd payload]
+```
+
+- origin 을 제외한 Access-Control-Allow-* 의 응답은 pre-filght에서 이미 응답했기 때문에 실제 응답에서는 헤더에 포함하지 않는다.
+
+
+
+###### 서버 CORS 설정(Spring)
 
 ```java
+//예시 1
 @Controller
 public class HomeController 
 {
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
+    @CrossOrigin
+    @GetMapping(path="/")
+    public String homeInit(Model model) {
+        return "home";
+    }
+}
+
+//예시 2
+@Controller
+public class HomeController 
+{
+    @CrossOrigin(origins = "http://domain1.com, http://domain2.com")
     @GetMapping(path="/")
     public String homeInit(Model model) {
         return "home";
@@ -184,32 +287,15 @@ public class HomeController
 }
 ```
 
-> `@CrossOrigin` 은 default로 모든 출처, 헤더, 메소드에대해 `maxAge` 30분 동한 허용. 
+- `@CrossOrigin` 에노테이션을 적용하면 기본적으로 모든 도메인, 메소드에대해 허용하고 Max-Age를 30분 허용한다.
+
+- 예시 2 와 같이 origins에 허용할 도메인을 입력시 해당 도메인만 허용 가능 
+
+- 클래스 위에 에노테이션을 적용하면 모든 메소드에 대해 허용
 
 
 
-**Global Level (WebMvcConfigurer bean)**
-
-```java
-@Configuration
-public class CorsConfiguration 
-{
-    @Bean
-    public WebMvcConfigurer corsConfigurer() 
-    {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**").allowedOrigins("http://localhost:8080");
-            }
-        };
-    }
-}
-```
-
-
-
-**CORS with Spring Security**
+**Spring Security**
 
 ```java
 @EnableWebSecurity
@@ -217,7 +303,11 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
  
     @Override
     protected void configure(HttpSecurity http) throws Exception {
-        http.cors().and()
+        http
+          .autorizeRequests()
+          .requestMatchers(CorsUtils::isPreFlightRequest).permitAll()
+          .anyRequest().authenticated().and()
+          .cors().and() 
             //other config
     }
  
@@ -227,6 +317,9 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList("https://example.com"));
         configuration.setAllowedMethods(Arrays.asList("GET","POST"));
+      	configuration.setAllowedHeader("X-PINGOTHER, Content-Type");
+      	configuration.setAllowCredentials(true);
+      	configuration.setMaxAge(86400);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -234,28 +327,31 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 }
 ```
 
+- 위와 같이 Spring Security에 configration에 설정을 하면 글로벌 레벨로 지정이 가능
 
+- `http.requestMatchers()`의 인자는 pre-flight요청은 인증처리를 하지 않게 하기위한 설정
 
-###### 2-1 HTTP 기본인증(Basic authentication)
+- `http.cors()`는 CORS를 적용하기 위한 부분, origin헤더가 있는 모든 요청에 대한 CORS헤더를 포함한 응답을 해준다.
 
-![img](http://iloveulhj.github.io/images/basic-auth/basic-auth2.png) 
+- setAllowCredentials(true)`는 해당 서버에서 `Authorization` 으로 사용자 인증도 서비스 한다면 true로 응답해야 한다.
 
-| 단계      | 헤더               | 설명                                                         | 메서드/상태 |
-| --------- | ------------------ | ------------------------------------------------------------ | ----------- |
-| 요청      |                    | 첫번째 요청 인증 정보가 없음                                 | GET         |
-| 인증 요구 | WWW-Authenticate   | 서버에서 사용자 이름과 비밀번호를 제공하라는 의미로<br /> 401 반환과 함께 요청을 반려 | 401         |
-| 인증      | Authorization      | 클라이언트에서 인증 알고리즘과 <br />사용자 이름, 비밀번호를 기술한 Authorization헤더를 재 요청 | GET         |
-| 성공      | Authorization-Info | 인증 정보가 정확하다면 성공 응답<br />(Authorization-Info에 인증 세션에 관한 추가 정보 기술 가능) | 200         |
+- `registerCorsConfiguration`에 `configuration`에 지정된 도메인 뒤로 나오는 모든("/**") 경로를 허용하기 위한 설정  
 
 
 
-#### HTTP 캐싱(caching)
+#### HTTP 캐싱
 
 ---
 
 **이전에 가져온 리소스를 재사용하여 대기시간과 네트워크 트래픽을 줄이고 리소스 표현을 표시하는 데 필요한 시간을 줄여 웹사이트의 응답성을 향상된다.**
 
-###### 1. 캐시의 종류
+
+
+![What a cache provide, advantages/disadvantages of shared/private caches.](https://mdn.mozillademos.org/files/13777/HTTPCachtType.png) 
+
+
+
+###### 캐싱의 종류
 
 - **`No cache`** : 캐시를 사용하지 않음
 - **`Local(private) cache`** : 개인 브라우저 캐시, 캐시 된 컨텐츠의 오프라인 브라우징 향상
@@ -263,7 +359,30 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 
 
-###### 2. 캐싱 제어 
+######캐싱 동작 대상
+
+**일반적인 HTTP캐시들은 GET에 대한 응답만을 캐싱**
+
+- 200 : GET요청에 대한 OK응답
+- 301 : 영구적 리다이렉트
+- 404 : 결과를 찾을 수 없음
+- 206 :  부분적 컨텐츠 응답
+- 캐시 키로 사용하기에 적절한 무언가 정의된 경우 GET이외의 응답
+
+> 요청이 컨텐츠 협상의 대상인 경우, 두번째 키에 의해 구별되는 다중 저장 응답으로 구성
+
+
+
+###### 캐싱 제어 
+
+```http
+GET /resources/post-here/ HTTP/1.1
+Cache-Control: no-store
+Cache-Control: no-cache, no-store, must-revalidate 
+Cache-Control: private
+Cache-Control: public
+Cache-Control: max-age=31536000
+```
 
 - `no-store` = 캐시 사용 안함, 요청 서버에서 매번 전체 응답 다운
 
@@ -277,15 +396,45 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 - `max-age=<seconds>` = resource 유효 최대 시간(만료 시간 지정)
 
-  ```http
-  Cache-Control: max-age=31536000
-  ```
+  
 
-- **`ETag`** = 캐시에 대한 유효성 검사 수행
+  
+
+  **`ETag`** = 캐시에 대한 유효성 검사 수행
 
  ![HTTP Cache-Control 예시](https://developers.google.com/web/fundamentals/performance/optimizing-content-efficiency/images/http-cache-control.png?hl=ko) 
 
 > 응답이 만료된 시점에 새 요청시 응답에서 리소스 전체를 새로 받아오지만, `ETag` 를 사용해 변경된 사항이 없는 동일한 리소스의 경우 304(Not Modified)를 반환된다. 다시 다운로드할 필요가 없으므로 시간과 대역폭이 절약 된다. 
+
+
+
+######캐싱 유효성
+
+**서버의 리소스가 변경되었을 때 서버는 캐시와 클라이언트에 접근할 수 없으므로 이를 해결하기 위해**
+
+**리소스에 대한 만료시간을 주고 받고, 서버상에 변경된 리소스가 캐시에 갱신 되어야하며 리소스가 아직 유효한지 검사를 해야한다.**
+
+
+
+**예시**
+
+![Show how a proxy cache acts when a doc is not cache, in the cache and fresh, in the cache and stale.](https://mdn.mozillademos.org/files/13771/HTTPStaleness.png) 
+
+- 첫번째 요청 후 서버에서 100초간 유지되는 캐시를 응답
+
+- 10초 후 재 요청시 age가 10이므로 서버에 요청이 가지 않고 캐시에 저장된 리소스 응답
+
+- 100초 이후 리소스 재요청 시 age는 만료이므로 캐시에서 `If-None-Match` 를 함께 요청해 true라면 
+
+- 304(Not Modified)를 반환
+
+
+
+**유효 수명 계산**
+
+- `Cache-control: Max-age=n` 헤더가 설정 된 경우 유효수명은 n과 동일
+- 만약 위 헤더가 없다면, Expires헤더가 있는지 없는지 검사
+- Expires헤더가 존재한다면, 값에서 Date헤더의 값을 뺀 결과가 
 
 
 
