--- a/_posts/2020-06-08-HTTP 활용 방법.md
+++ b/_posts/2020-06-08-HTTP 활용 방법.md
@@ -12,21 +12,11 @@
 
 **4. HTTP 캐싱**
 
-**5. HTTP 컨텐츠 협상**
+</br>
 
-**6. HTTP 조건부 요청**
+</br>
 
-**7. HTTP 쿠키**
-
-**8. HTTP 범위 요청**
-
-**9.  HTTP 리다이렉트**
-
-
-
-
-
-
+</br>
 
 ####HTTP 정의 및 특징
 
@@ -34,7 +24,7 @@
 
 **HyperText Transfer Protocol : 하이퍼텍스트, 하이퍼미디어 데이터를 주고 받는데 사용되는 프로토콜**
 
-
+<br />
 
 1. TCP/IP위에서 작동하는 응용 계층(`Application Layer`) 프로토콜
 
@@ -47,7 +37,7 @@
 -  장점 : 불특정 다수를 대상으로 하는 서비스에 적합
 -  단점 : statless특징으로 이전 상태를 알 수 없음 (cookie 를 이용하여 문제 해결 가능)
 
-
+<br />
 
 ######application Layer Protocol
 
@@ -55,17 +45,17 @@
 
 > TCP 혹은 암호화된 TCP 연결인 TLS를 통해 전송이 가능하다
 
+</br>
 
+</br>
 
-
-
-
+</br>
 
 #### HTTP 메소드 및 응답코드
 
 ---
 
-
+</br>
 
 ###### 1. 메소드
 
@@ -83,7 +73,11 @@
 
 > RESTful 서버의 경우 메소드 구분으로 자원의 위치와 더불어 자원이 할 일을 명시할 수 있어 다양한 메소드를 사용한다.
 
+</br>
 
+</br>
+
+</br>
 
 ###### 2. 응답코드
 
@@ -108,11 +102,11 @@
 | 503  | `Service Temporarily Unavailable` | 서비스를 일시적으로 사용할 수 없을 때 사용된다. <br />주로 웹서버 등이 과부하로 다운되었을 때 볼 수 있다. |
 | 504  | `Gateway Timeout`                 | 게이트웨이가 연결된 서버로부터 응답을 받을 수 없었을 때 사용 |
 
+<br />
 
+<br />
 
-
-
-
+<br />
 
 #### HTTP 엑세스 제어(CORS) 및 인증
 
@@ -122,7 +116,7 @@
 
 **서로 다른 도메인에서 리소스를 공유하도록 원래 도메인과 다른 도메인에 요청하도록 하는 메커니즘**
 
-
+<br />
 
 ###### CORS 사용 이유
 
@@ -132,7 +126,7 @@
 
 한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
 
-
+<br />
 
 ###### 해결 방법
 
@@ -144,7 +138,7 @@
 
 - Spring의 경우 4.2부터 지원
 
-
+<br />
 
 ###### CORS 동작 과정
 
@@ -152,11 +146,11 @@
 
 > prefilght : OPTIONS메서드를 통해 다른 도메인의 리소스로 HTTP요청을 보내 실제 요청이 전송하기 안전한지 확인
 
-
+<br />
 
 ![img](https://mdn.mozillademos.org/files/16753/preflight_correct.png) 
 
-
+<br />
 
 **클라이언트 요청**
 
@@ -171,7 +165,7 @@ xhr.onreadystatechange = handler;
 xhr.send('<person><name>Arun</name></person>');
 ```
 
-
+<br />
 
 **pre-flight HTTP 요청**
 
@@ -192,7 +186,7 @@ Access-Control-Request-Headers: X-PINGOTHER, Content-Type
 >
 > origin : 요청을 보낸 호스트URL
 
-
+<br />
 
 **pre-flight HTTP 응답**
 
@@ -215,7 +209,7 @@ Connection: Keep-Alive
 >
 > Access-Control-Max-Age 값에있는 시간(초) 만큼만 캐시 유지
 
- 
+ <br />
 
 **콘텐츠 HTTP 요청**
 
@@ -238,7 +232,7 @@ Cache-Control: no-cache
 <person><name>Arun</name></person>
 ```
 
-
+<br />
 
 **콘텐츠 HTTP 응답**
 
@@ -259,7 +253,7 @@ Content-Type: text/plain
 
 - origin 을 제외한 Access-Control-Allow-* 의 응답은 pre-filght에서 이미 응답했기 때문에 실제 응답에서는 헤더에 포함하지 않는다.
 
-
+<br />
 
 ###### 서버 CORS 설정(Spring)
 
@@ -293,7 +287,7 @@ public class HomeController
 
 - 클래스 위에 에노테이션을 적용하면 모든 메소드에 대해 허용
 
-
+<br />
 
 **Spring Security**
 
@@ -337,7 +331,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 - `registerCorsConfiguration`에 `configuration`에 지정된 도메인 뒤로 나오는 모든("/**") 경로를 허용하기 위한 설정  
 
-
+<br />
 
 #### HTTP 캐싱
 
@@ -345,11 +339,11 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 **이전에 가져온 리소스를 재사용하여 대기시간과 네트워크 트래픽을 줄이고 리소스 표현을 표시하는 데 필요한 시간을 줄여 웹사이트의 응답성을 향상된다.**
 
-
+<br />
 
 ![What a cache provide, advantages/disadvantages of shared/private caches.](https://mdn.mozillademos.org/files/13777/HTTPCachtType.png) 
 
-
+<br />
 
 ###### 캐싱의 종류
 
@@ -357,7 +351,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 - **`Local(private) cache`** : 개인 브라우저 캐시, 캐시 된 컨텐츠의 오프라인 브라우징 향상
 - **`shered cache`** : 공유 프록시 캐시, 둘 이상의 사용자가 재사용 할 응답을 저장하는 캐시
 
-
+<br />
 
 ######캐싱 동작 대상
 
@@ -371,7 +365,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 > 요청이 컨텐츠 협상의 대상인 경우, 두번째 키에 의해 구별되는 다중 저장 응답으로 구성
 
-
+<br />
 
 ###### 캐싱 제어 
 
@@ -385,28 +379,21 @@ Cache-Control: max-age=31536000
 ```
 
 - `no-store` = 캐시 사용 안함, 요청 서버에서 매번 전체 응답 다운
-
 - `no-cache` = 캐시는 사용하나 재확인, 사본을 release 하기전에 origin 서버로 유효성 검증(http1.0=`pragma`)
-
 - `must-revalidate` = 만료된 캐시만 서버에 검증 요청
-
 - `private` = 개인 브라우저 캐시에만 응답을 저장
-
 - `public` = 일반적으로 캐시 할 수 없는 HTTP인증 또는 응답 상태 코드가 있는 페이지를 캐시하는 경우 유용
-
 - `max-age=<seconds>` = resource 유효 최대 시간(만료 시간 지정)
 
-  
+<br />
 
-  
-
-  **`ETag`** = 캐시에 대한 유효성 검사 수행
+**`ETag`** = 캐시에 대한 유효성 검사 수행
 
  ![HTTP Cache-Control 예시](https://developers.google.com/web/fundamentals/performance/optimizing-content-efficiency/images/http-cache-control.png?hl=ko) 
 
 > 응답이 만료된 시점에 새 요청시 응답에서 리소스 전체를 새로 받아오지만, `ETag` 를 사용해 변경된 사항이 없는 동일한 리소스의 경우 304(Not Modified)를 반환된다. 다시 다운로드할 필요가 없으므로 시간과 대역폭이 절약 된다. 
 
-
+<br />
 
 ######캐싱 유효성
 
@@ -414,7 +401,7 @@ Cache-Control: max-age=31536000
 
 **리소스에 대한 만료시간을 주고 받고, 서버상에 변경된 리소스가 캐시에 갱신 되어야하며 리소스가 아직 유효한지 검사를 해야한다.**
 
-
+<br />
 
 **예시**
 
@@ -428,23 +415,25 @@ Cache-Control: max-age=31536000
 
 - 304(Not Modified)를 반환
 
-
+<br />
 
 **유효 수명 계산**
 
 - `Cache-control: Max-age=n` 헤더가 설정 된 경우 유효수명은 n과 동일
-- 만약 위 헤더가 없다면, Expires헤더가 있는지 없는지 검사
-- Expires헤더가 존재한다면, 값에서 Date헤더의 값을 뺀 결과가 
+- 만약 위 헤더가 없다면, `Expires`헤더가 있는지 없는지 검사
+- `Expires` 헤더가 존재한다면, 값에서 `Date`헤더의 값을 뺀 결과가 유효 수명
+- `Expires` 헤더도 없다면, `Last-Modified` 헤더를 찾는다.
+- `Last-Modified` 는 `Date` 값에서 `Last-Modified` 헤더 값을 뺀 값을 10으로 나눈 결과가 유효 수명 
 
-
-
-###### 3. 조건부 요청
+<br />
 
 ![캐시가 비어있을 때 발행 된 요청은 유효성 검사기 값이 모두 헤더로 전송되어 다운로드 할 리소스를 트리거합니다.  그런 다음 캐시가 채워집니다.](https://mdn.mozillademos.org/files/13729/Cache1.png) 
 
+
+
 > 클라이언트가 리소스 요청시 리소스와 함께 유효성 검사를 위한 `Last-Modified` 와 `Etag` 가 전송
 
-
+<br />
 
 ![오래된 캐시를 사용하면 조건부 요청이 전송됩니다.  서버는 자원이 변경되었는지 판별 할 수 있으며,이 경우와 동일하므로 다시 보내지 않기로 결정합니다.](https://mdn.mozillademos.org/files/13731/HTTPCache2.png) 
 
@@ -452,13 +441,13 @@ Cache-Control: max-age=31536000
 
 > 자원이 변경되지 않은 경우 `304 Not Modified` 응답
 
-
+<br />
 
 ![리소스가 변경된 경우 요청이 조건이없는 것처럼 다시 전송됩니다.](https://mdn.mozillademos.org/files/13733/HTTPCache3.png) 
 
 > 자원이 변경 된 경우 새 버전의 자원과 유효성 검사기 응답 `200 OK`
 
-
+<br />
 
 | 헤더                      | 설명                                                         |
 | :------------------------ | ------------------------------------------------------------ |
@@ -468,7 +457,7 @@ Cache-Control: max-age=31536000
 | **`If-Unmodified-Since`** | `Last-Modified`원격 자원 의 날짜가이 헤더에 제공된 날짜보다 오래되었거나 같은 경우에 성공합니다 . |
 | **`If-Range`**            | 유사 `If-Match`하거나 `If-Unmodified-Since`, 오직 하나의 ETAG, 또는 하나의 일을 할 수 있습니다. 실패하면 범위 요청이 실패하고 응답 대신 전체 리소스와 함께 a 가 전송됩니다. |
 
-
+<br />
 
 #### 간단한 Springboot Cache 적용
 
@@ -627,32 +616,4 @@ Vary: User-Agent
 ```
 
 > 서버는 자신이 캐쉬한 응답을 적절한 Accept-Encoding 요청 헤더를 보낸 클라이언트에게만 보내도록 Vary: Accept-Encoding으로 설정
-
-
-
-####HTTP 압축(Compresstion)
-
----
-
-**HTTP 압축은 웹 사이트의 성능을 높이는 중요한 방법. **
-
-**어떤 문서에 대해, 70%가 넘는 사이즈 축소는 필요로 하는 대역폭 용량을 낮춰준다**
-
-
-
-
-
-#####WWW(World Wide Web)
-
-- 인터넷상의 정보를 하이퍼텍스트 방식과 멀티미디어 환경에서 검색할 수 있게 해주는 정보 검색 시스템
-
-
-
-#####하이퍼텍스트(HyperText)
-
-- 웹 브라우저라는 프로그램을 통해 웹 서버에서 문서나, 웹페이지 등의 정보 조각을 읽어들여 모니터에 출력하게 하게 된다.
-
-
-
-https://chorizzori.tistory.com/79
 
