--- a/_posts/2020-05-10-HTTP활용방법.md
+++ b/_posts/2020-05-10-HTTP활용방법.md
@@ -1,22 +1,18 @@
 ## HTTP
 
-<br />
+---
+
+### HTTP에 대한 기초 지식 및 기능별 흐름 및
+
+### Spring에서의 사용법을 기술 한 문서
 
 <br />
 
 <br />
-
-### HTTP에 대한 기초 지식 및 기능별 흐름, Spring에서의 사용법을 기술 한 문서
-
-<br />
-
-<br />
-
-#### 문서 번호 : 00001
 
 #### Version 1.0
 
-#### 2020-05-10**
+#### 2020-05-10
 
 <br />
 
@@ -41,11 +37,13 @@
 <br />
 
 <br />
+
+---
 
 #### 개정 이력
 
 | 버전 | 변경일자   | 개정 내용 | 작성자 |
-| ---- | ---------- | --------- | ------ |
+| :--- | :--------- | :-------- | :----- |
 | 1.0  | 2020-05-10 | 최초 작성 | 전영준 |
 |      |            |           |        |
 |      |            |           |        |
@@ -56,6 +54,8 @@
 |      |            |           |        |
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+---
 
 ### 목차
 
@@ -69,13 +69,13 @@
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
+---
+
 #### HTTP 정의 및 특징
 
 ---
 
 **HyperText Transfer Protocol : 하이퍼텍스트, 하이퍼미디어 데이터를 주고 받는데 사용되는 프로토콜**
-
-<br />
 
 1. TCP/IP위에서 작동하는 응용 계층(`Application Layer`) 프로토콜
 
@@ -106,8 +106,6 @@
 
 ---
 
-<br />
-
 ###### 1. 메소드
 
 | 메소드    | 설명                                                         |
@@ -123,10 +121,6 @@
 | `PATCH`   | 리소스 일정 부분만 수정                                      |
 
 > RESTful 서버의 경우 메소드 구분으로 자원의 위치와 더불어 자원이 할 일을 명시할 수 있어 다양한 메소드를 사용한다.
-
-<br />
-
-<br />
 
 <br />
 
@@ -157,9 +151,7 @@
 
 <br />
 
-<br />
-
-#### HTTP 엑세스 제어(CORS) 및 인증
+#### HTTP 엑세스 제어(CORS)
 
 ---
 
@@ -169,7 +161,7 @@
 
 <br />
 
-###### CORS 사용 이유
+###### #CORS 사용 이유
 
 보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
 
@@ -179,7 +171,7 @@
 
 <br />
 
-###### 해결 방법
+###### #해결 방법
 
 `JSONP(JSON with Padding)` 사용
 
@@ -191,7 +183,7 @@
 
 <br />
 
-###### CORS 동작 과정
+###### #CORS 동작 과정
 
 실제 요청하려는 경로와 같은 URL에 대해 pre-flight 로 요청을 날려보고 요청가능한지 확인
 
