--- a/_posts/2020-06-08-HTTP.md
+++ b/_posts/2020-06-08-HTTP.md
@@ -4,16 +4,13 @@
 
 <br />
 
-<div style=float:right>
-<p><b>Version 1.0</b></p>
-  <p><b>2020-05-10</b></p>
-</div>
+<div style=float:right><p><b>Version 1.0</b></p><p><b>2020-05-10</b></p></div>
 
 
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-
+---
 
 ### 목차
 
