[add] 동일 출처 정책 추가

--- a/_posts/2020-06-08-HTTP.md
+++ b/_posts/2020-06-08-HTTP.md
@@ -4,9 +4,9 @@
 
 <br />
 
-<div style=float:right><p><b>Version 1.0</b></p><p><b>2020-05-10</b></p></div>
+**Version  :  1.0**
 
-
+**Date       :  2020-05-10**
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
@@ -18,7 +18,7 @@
 
 **2. HTTP 메소드 및 응답코드**
 
-**3. HTTP 엑세스 제어**
+**3. HTTP 엑세스 제어(CORS)**
 
 **4. HTTP 캐싱**
 
@@ -112,7 +112,7 @@
 
 **엑세스제어(`CORS : Cross-Origin Resource Sharing`)**
 
-**서로 다른 도메인에서 리소스를 공유하도록 원래 도메인과 다른 도메인에 요청하도록 하는 메커니즘**
+**교차 출처 리소스 공유, 서로 다른 도메인에서 리소스를 공유하도록 다른 도메인에서 최초로 자원이 서비스 된 도메인으로 요청을 허용 하는 메커니즘**
 
 <br />
 
@@ -120,9 +120,11 @@
 
 보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
 
-동일 출처 정책(`Same-origin-policy`)을 따르지 않을 경우, API이용이 거절 된다.
+[동일 출처 정책(`Same-origin-policy`)](https://youngjun93.github.io/2020-06-08-동일 출처 정책/)을 따르지 않을 경우, API이용이 거절 된다.
 
 한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
+
+> 동일 출처 정책 : 
 
 <br />
 
