--- a/_posts/2020-06-08-HTTP.md
+++ b/_posts/2020-06-08-HTTP.md
@@ -57,7 +57,7 @@
 
 <br />
 
-#### HTTP 메소드 및 응답코드
+#### HTTP 메소드 및 상태코드
 
 ---
 
@@ -79,7 +79,13 @@
 
 <br />
 
-###### 2. 응답코드
+###### 2. 상태코드
+
+- 1xx (정보): 요청을 받았으며 프로세스를 계속한다
+- 2xx (성공): 요청을 성공적으로 받았으며 인식했고 수용하였다
+- 3xx (리다이렉션): 요청 완료를 위해 추가 작업 조치가 필요하다
+- 4xx (클라이언트 오류): 요청의 문법이 잘못되었거나 요청을 처리할 수 없다
+- 5xx (서버 오류): 서버가 명백히 유효한 요청에 대해 충족을 실패했다
 
 | 코드 | 결과                              | 설명                                                         |
 | ---- | --------------------------------- | ------------------------------------------------------------ |
@@ -120,17 +126,15 @@
 
 보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
 
-[동일 출처 정책(`Same-origin-policy`)](https://youngjun93.github.io/2020-06-08-동일 출처 정책/)을 따르지 않을 경우, API이용이 거절 된다.
+[동일 출처 정책(`Same-origin-policy`)](https://youngjun93.github.io/2020-06-08-동일%20출처%20정책/)을 따르지 않을 경우, API이용이 거절 된다.
 
 한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
-
-> 동일 출처 정책 : 
 
 <br />
 
 ###### #해결 방법
 
-`JSONP(JSON with Padding)` 사용
+[`JSONP(JSON with Padding)`](https://ko.wikipedia.org/wiki/JSONP) 사용
 
 - 클라이언트가 아닌, 각기 다른 도메인에 상주하는 서버로부터 데이터를 요청하기 위해 사용
 
@@ -357,10 +361,6 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 **일반적인 HTTP캐시들은 GET에 대한 응답만을 캐싱**
 
-- 200 : GET요청에 대한 OK응답
-- 301 : 영구적 리다이렉트
-- 404 : 결과를 찾을 수 없음
-- 206 :  부분적 컨텐츠 응답
 - 캐시 키로 사용하기에 적절한 무언가 정의된 경우 GET이외의 응답
 
 > 요청이 컨텐츠 협상의 대상인 경우, 두번째 키에 의해 구별되는 다중 저장 응답으로 구성
@@ -387,7 +387,7 @@ Cache-Control: max-age=31536000
 
 <br />
 
-######캐싱 유효성
+###### 캐싱 유효성
 
 **서버의 리소스가 변경되었을 때 서버는 캐시와 클라이언트에 접근할 수 없으므로 이를 해결하기 위해**
 
@@ -409,7 +409,7 @@ Cache-Control: max-age=31536000
 
 <br />
 
-**유효 수명 계산**
+###### 유효 수명 계산
 
 - `Cache-control: Max-age=n` 헤더가 설정 된 경우 유효수명은 n과 동일
 - 만약 위 헤더가 없다면, `Expires`헤더가 있는지 없는지 검사
@@ -516,94 +516,6 @@ public class TestService {
         list.add(info);
     }
 }
-```
-
-
-
-####HTTP  컨텐츠 협상(Content Negotiation)
-
----
-
-**동일한  URL에서 리소스의 서로 다른 버전을 지원하기 위해 사용되는 메커니즘**
-
-1. 클라이언트가 리소스를 내려받기를 원하는 경우, URL을 사용하여 요청한다.
-
-2. 서버는 리소스를 선택하기 위해 URL을 사용하여 클라이언트에게 리소스의 특정 프레젠테이션을 반환한다.
-
-> 프레젠테이션 : 리소스가 제공하는 변형
-
-
-
-
-
-#### 서버주도 컨텐츠 협상
-
-**헤더 목록인 `Accept`, `Accept-Charset`, `Accept-Encoding`, `Accept-Language` 를 정의**
-
-**어떤 헤더가 사용될 지 가리키기 위해`Vary`헤더 사용**
-
-
-
-######Accept
-
-**클라이언트가 처리하고자 하는 파일 형식(MIME TYPE)을 나열한 헤더**
-
-`*/*`  = 모든 MIME 유형
-
-`<MIME_type>/*` = 하위 유형 없음 (ex: `image/*`(`image/png`, `image/svg`, `image/gif`))
-
-`<MIME_type>/<MIME_subtype>` = 정확한 MIME 타입 지정 (ex: `text/html`)
-
-`;q=` = 상대 품질 계수 (0 ~ 1)
-
-```http
-Request Headers
-//default
-Accept: */*
-// Default for navigation requests
-Accept: text/html, application/xhtml+xml, application/xml;q=0.9, */*;q=0.8
-Accept: text/html
-Accept: image/*
-```
-
-
-
-######Accept-Charset
-
-**클라이언트가 어떤 종류의 인코딩을 이해 할 수 있는지 알려주는 헤더**
-
-> 현재는 UTF-8이 보편화 되어 위 헤더를 생략
-
-
-
-###### Accept-Encoding
-
-**클라이언트가 압축 가능한 컨텐츠 인코딩을 정의한 헤더**
-
->  jpeg 이미지와 같은 어떤 유형의 리소스들은 이미 압축되어 있으며 추가적인 압축은 페이로드를 더 길게 만들수도 있다
-
-```http
-Request Headers
-Accept-Encoding: gzip
-Accept-Encoding: br
-Accept-Encoding: *
-//Multiple algorithms, weighted with the quality value syntax
-Accept-Encoding: deflate, gzip;q=1.0, *;q=0.5
-```
-
-
-
-![img](https://mdn.mozillademos.org/files/13811/HTTPCompression1.png) 
-
-
-
-######Accept-Lenguage
-
-**클라이언트가 선호하는 언어를 가리키는 헤더**
-
-```http
-Request Headers
-Accept-Language: en-US,en;q=0.5
 ```
 
 
