--- a/_posts/2020-06-08-HTTP.md
+++ b/_posts/2020-06-08-HTTP.md
@@ -32,13 +32,17 @@
 
 **HyperText Transfer Protocol : 하이퍼텍스트, 하이퍼미디어 데이터를 주고 받는데 사용되는 프로토콜**
 
+> hyperText : 한 문서에서 다른 문서로 즉시 접근할 수 있는 텍스트
+>
+> hyperMedia : 문자 정보뿐만 아니라 도형·화상·홀로그래피·음성·애니메이션 등을 한 문서에서 다른 문서로 즉시 접근할 수 있다.
+
 1. TCP/IP위에서 작동하는 응용 계층(`Application Layer`) 프로토콜
 
 2. 인터넷상에서 데이터를 주고 받기 위한 서버/클라이언트 모델
 
 3. 서버가 요청간에 어떠한 데이터 상태도 유지하지 않음(`Statless protocol`)
 
-4. 비연결형 프로토콜(Connectionless)
+4. 비연결형 프로토콜([Connectionless](https://simhyejin.github.io/2016/07/04/connectionoriented-connectionless/))
 
 -  장점 : 불특정 다수를 대상으로 하는 서비스에 적합
 -  단점 : statless특징으로 이전 상태를 알 수 없음 (cookie 를 이용하여 문제 해결 가능)
@@ -126,7 +130,7 @@
 
 보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
 
-[동일 출처 정책(`Same-origin-policy`)](https://youngjun93.github.io/2020-06-08-동일%20출처%20정책/)을 따르지 않을 경우, API이용이 거절 된다.
+[동일 출처 정책(`Same-origin-policy`)]([https://ko.wikipedia.org/wiki/%EB%8F%99%EC%9D%BC-%EC%B6%9C%EC%B2%98_%EC%A0%95%EC%B1%85](https://ko.wikipedia.org/wiki/동일-출처_정책))을 따르지 않을 경우, API이용이 거절 된다.
 
 한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
 
@@ -192,7 +196,7 @@ Access-Control-Request-Headers: X-PINGOTHER, Content-Type
 
 <br />
 
-######pre-flight HTTP 응답
+###### pre-flight HTTP 응답
 
 ```http
 HTTP/1.1 204 No Content
@@ -331,7 +335,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 - `http.cors()`는 CORS를 적용하기 위한 부분, origin헤더가 있는 모든 요청에 대한 CORS헤더를 포함한 응답을 해준다.
 
-- setAllowCredentials(true)`는 해당 서버에서 `Authorization` 으로 사용자 인증도 서비스 한다면 true로 응답해야 한다.
+- `setAllowCredentials(true)`는 해당 서버에서 `Authorization` 으로 사용자 인증도 서비스 한다면 true로 응답해야 한다.
 
 - `registerCorsConfiguration`에 `configuration`에 지정된 도메인 뒤로 나오는 모든("/**") 경로를 허용하기 위한 설정  
 
@@ -357,7 +361,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 <br />
 
-######캐싱 동작 대상
+###### 캐싱 동작 대상
 
 **일반적인 HTTP캐시들은 GET에 대한 응답만을 캐싱**
 
@@ -518,20 +522,4 @@ public class TestService {
 }
 ```
 
-
-
-###### Very
-
-**캐시 된 응답을 향후 요청시 새로운 요청 대신 사용 할 수 있는지 여부를 결정하는 헤더**
-
-```http
-Request Headers
-//캐시할 수 없는 요청 간주(Cache-Control헤더를 사용하는게 더 명시적이다.)
-Vary: *
-//지정된 헤더만 캐시된 응답을 사용할 수 있도록 결정
-Vary: <header-name>, <header-name>, ...
-Vary: User-Agent
-```
-
-> 서버는 자신이 캐쉬한 응답을 적절한 Accept-Encoding 요청 헤더를 보낸 클라이언트에게만 보내도록 Vary: Accept-Encoding으로 설정
 
