--- a/_posts/2020-06-08-HTTP.md
+++ b/_posts/2020-06-08-HTTP.md
@@ -24,8 +24,6 @@
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
----
-
 #### HTTP 정의 및 특징
 
 ---
@@ -130,7 +128,7 @@
 
 보통의 경우 API를 호출 할 때 AJAX를 사용하는데 
 
-[동일 출처 정책(`Same-origin-policy`)]([https://ko.wikipedia.org/wiki/%EB%8F%99%EC%9D%BC-%EC%B6%9C%EC%B2%98_%EC%A0%95%EC%B1%85](https://ko.wikipedia.org/wiki/동일-출처_정책))을 따르지 않을 경우, API이용이 거절 된다.
+[동일 출처 정책(`Same-origin-policy`)](https://en.wikipedia.org/wiki/Same-origin_policy)을 따르지 않을 경우, API이용이 거절 된다.
 
 한 사이트에서 여러 도메인을 가지고 있는 경우, 도메인만 다를 뿐 똑같은 서비스여도 동일 출처 정책을 따르지 않는다.
 
